--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
-theme: jekyll-theme-minimal
 title: [Edwin Pan]
-description: [Edwin Pan's personal website]
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
+description: [Edwin Pan]
+  First description 
+  <br><br>
+  Second description 
+  <br><br>
+  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
+
+  
+theme: jekyll-theme-minimal
