--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 title: [Edwin Pan]
 logo: "/res/Edwin_Portrait.jpeg?raw=true"
 description: 
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
+  <p style="font-size:150%; font-weight:bold; margin:0;">Edwin Pan</p>
+  <p style="font-size:100%; margin:0;">Senior, Electrical Engineering</p>
+  <a style="font-size:80%;" href="http://www.ece.illinois.edu/">Department of Electrical and Computer Engineering</a><br>
+  <a style="font-size:80%;" href="http://csl.illinois.edu/">Coordinated Science Laboratory</a><br>
+  <a style="font-size:80%;" href="http://www.illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
+  <!--<p style="font-size:80%;"><i class="fa fa-globe"></i> Insert Address </p> -->
+  <p style="font-size:80%;"><i class="fa fa-github"></i> <a href="https://github.com/edwin-pan">github.com/edwin-pan</a></p>
 
 theme: jekyll-theme-minimal
